Renaming variabls and html
Signed-off-by: Sharad Gaur <sgaur@splunk.com>

--- a/web/ui/templates/status.html
+++ b/web/ui/templates/status.html
@@ -112,7 +112,7 @@
         </tr>
       </tbody>
     </table>
-    <input class="btn btn-primary" type="submit" value="Populate Cardinality Status" id="get_stats"></div>
+    <input class="btn btn-primary" type="submit" value="Query Cardinality Status" id="get_stats"></div>
     <div id="devHeadStats" class="container-fluid">
 
     </div>
