--- a/web/ui/templates/headstats.html
+++ b/web/ui/templates/headstats.html
@@ -1,12 +1,12 @@
-
-<h3 id="headstatus">Highest Cardinality Labels {{.Cache}}</h3>
+<div>Total Query Time: {{ .Duration }} Seconds</div>
+<h3 id="headstatus">Highest Cardinality Labels </h3>
 <table class="table table-sm table-bordered table-striped table-hover">
   <tbody>
     <tr>
        <th>Name</th>
        <th>Count</th>
     </tr>
-    {{ range .CardinalityLabelStats }}
+    {{ range .Stats.CardinalityLabelStats }}
     <tr>
       <td scope="row">{{.Name}}</th>
       <td>{{.Count}}</td>  
@@ -21,7 +21,7 @@
          <th>Name</th>
          <th>Count</th>
       </tr>
-      {{ range .CardinalityMetricsStats }}
+      {{ range .Stats.CardinalityMetricsStats }}
       <tr>
         <td scope="row">{{.Name}}</th>
         <td>{{.Count}}</td>  
@@ -36,7 +36,7 @@
            <th>Name</th>
            <th>Length</th>
         </tr>
-        {{ range .LabelValueStats }}
+        {{ range .Stats.LabelValueStats }}
         <tr>
           <td scope="row">{{.Name}}</th>
           <td>{{.Count}}</td>  
@@ -51,7 +51,7 @@
              <th>Name</th>
              <th>Count</th>
           </tr>
-          {{ range .LabelValuePairsStats }}
+          {{ range .Stats.LabelValuePairsStats }}
           <tr>
             <td scope="row">{{.Name}}</th>
             <td>{{.Count}}</td>  
