make input controlled
Signed-off-by: blalov <boyko.lalov@tick42.com>

--- a/web/ui/react-app/src/App.css
+++ b/web/ui/react-app/src/App.css
@@ -13,6 +13,7 @@ body {
 .expression-input textarea {
     /* font-family: Menlo,Monaco,Consolas,'Courier New',monospace; */
     resize: none;
+    overflow: hidden;
 }
 
 button.execute-btn {
