--- a/web/ui/react-app/src/App.css
+++ b/web/ui/react-app/src/App.css
@@ -2,6 +2,10 @@ body {
     padding-top: 10px; /* TODO remove */
 }
 
+button.classic-ui-btn {
+    padding: 10px 0;
+}
+
 .panel {
     margin-bottom: 20px;
 }
