migrate query history (#6193)
* migrate query history

Signed-off-by: blalov <boyko.lalov@tick42.com>

* update lock file

Signed-off-by: blalov <boyko.lalov@tick42.com>

* set expression input height when item is selected

Signed-off-by: blalov <boyko.lalov@tick42.com>

* pr review changes

Signed-off-by: blalov <boyko.lalov@tick42.com>

--- a/web/ui/react-app/src/App.css
+++ b/web/ui/react-app/src/App.css
@@ -10,6 +10,16 @@ button.classic-ui-btn {
     margin-bottom: 20px;
 }
 
+input[type='checkbox']:checked + label {
+  color: #286090;
+}
+
+.custom-control-label {
+  cursor: pointer;
+  font-size: .875rem;
+  line-height: 1.8;
+}
+
 .expression-input {
     margin-bottom: 10px;
 }
