--- a/web/ui/templates/alerts.html
+++ b/web/ui/templates/alerts.html
@@ -11,7 +11,7 @@
             <input type="checkbox" name="alertFilters" id="inactiveAlerts" autocomplete="off"> Inactive ({{ .Counts.Inactive }})
         </label>
         <label class="btn btn-primary active">
-            <input type="checkbox" name="alertFilters" id="activeAlerts" autocomplete="off"> Active ({{ .Counts.Active }})
+            <input type="checkbox" name="alertFilters" id="pendingAlerts" autocomplete="off"> Pending ({{ .Counts.Pending }})
         </label>
         <label class="btn btn-primary active">
             <input type="checkbox" name="alertFilters" id="firingAlerts" autocomplete="off"> Firing ({{ .Counts.Firing }})
