React UI: Improve styling of autocomplete sections
I removed the Card-related components and went back to normal <ul>/<li>,
since the style that Cards added just got in the way (like adding extra
borders and rounding, etc.), and from the examples at
https://getbootstrap.com/docs/4.3/components/card/, it doesn't seem like
multiple Cards are meant to be used as part of a larger list
(style-wise).

Signed-off-by: Julius Volz <julius.volz@gmail.com>

--- a/web/ui/react-app/src/App.css
+++ b/web/ui/react-app/src/App.css
@@ -72,10 +72,15 @@ button.execute-btn {
     left: 56px;
     float: left;
     margin: -5px;
+}
+
+.autosuggest-dropdown-list {
+    padding: 0;
+    margin: 0 0 5px 0;
     list-style: none;
 }
 
-.autosuggest-dropdown li {
+.autosuggest-dropdown-list li {
     width: 100%;
     padding: .25rem 1.5rem;
     clear: both;
@@ -85,9 +90,11 @@ button.execute-btn {
     display: block;
 }
 
-.autosuggest-dropdown .card-header {
-    background: rgba(240, 230, 140, 0.4);
-    height: 30px;
+.autosuggest-dropdown-list li.autosuggest-dropdown-header {
+    margin-bottom: 5px;
+    background-color: #bfdeff;
+    height: 25px;
+    font-size: 10px;
     display: flex;
     align-items: center;
     text-transform: uppercase;
