--- a/web/ui/templates/status.html
+++ b/web/ui/templates/status.html
@@ -1,6 +1,4 @@
-{{define "head"}}
-<script src="{{ pathPrefix }}/static/js/status.js?v={{ buildVersion }}"></script>
-{{end}}
+{{define "head"}}<!-- nix -->{{end}}
 
 {{define "content"}}
   <div class="container-fluid">
@@ -112,9 +110,66 @@
         </tr>
       </tbody>
     </table>
-    <input class="btn btn-primary" type="submit" value="Query Cardinality Stats" id="get_stats"></div>
-    <div id="devHeadStats" class="container-fluid">
-
-    </div>
+    <div>Total Query Time: {{ .Duration }} Seconds</div>
+    <h3 id="headstatus">Highest Cardinality Labels </h3>
+    <table class="table table-sm table-bordered table-striped table-hover">
+      <tbody>
+        <tr>
+           <th>Name</th>
+           <th>Count</th>
+        </tr>
+        {{ range .Stats.CardinalityLabelStats }}
+        <tr>
+          <td scope="row">{{.Name}}</th>
+          <td>{{.Count}}</td>  
+        </tr>
+        {{end}}
+      </tbody>
+    </table>
+    <h3 id="headstatus">Highest Cardinality Metric Names</h3>
+    <table class="table table-sm table-bordered table-striped table-hover">
+        <tbody>
+          <tr>
+             <th>Name</th>
+             <th>Count</th>
+          </tr>
+          {{ range .Stats.CardinalityMetricsStats }}
+          <tr>
+            <td scope="row">{{.Name}}</th>
+            <td>{{.Count}}</td>  
+          </tr>
+          {{end}}
+        </tbody>
+      </table>
+      <h3 id="headstatus">Label Names With Highest Cumulative Label Value Length</h3>
+      <table class="table table-sm table-bordered table-striped table-hover">
+          <tbody>
+            <tr>
+               <th>Name</th>
+               <th>Length</th>
+            </tr>
+            {{ range .Stats.LabelValueStats }}
+            <tr>
+              <td scope="row">{{.Name}}</th>
+              <td>{{.Count}}</td>  
+            </tr>
+            {{end}}
+          </tbody>
+        </table>      
+        <h3 id="headstatus">Most Common Label Pairs</h3>
+        <table class="table table-sm table-bordered table-striped table-hover">
+            <tbody>
+              <tr>
+                 <th>Name</th>
+                 <th>Count</th>
+              </tr>
+              {{ range .Stats.LabelValuePairsStats }}
+              <tr>
+                <td scope="row">{{.Name}}</th>
+                <td>{{.Count}}</td>  
+              </tr>
+              {{end}}
+            </tbody>
+        </table>   
   </div>
 {{end}}
