refactor alert managers section
Signed-off-by: blalov <boyko.lalov@tick42.com>

--- a/web/ui/react-app/src/App.css
+++ b/web/ui/react-app/src/App.css
@@ -12,6 +12,10 @@ input[type='checkbox']:checked + label {
   line-height: 1.8;
 }
 
+.capitalize-title::first-letter {
+    text-transform: capitalize;
+}
+
 .expression-input {
     margin-bottom: 10px;
 }
