--- a/web/ui/react-app/src/App.css
+++ b/web/ui/react-app/src/App.css
@@ -62,20 +62,21 @@ button.execute-btn {
 .autosuggest-dropdown {
     position: absolute;
     border: 1px solid #ced4da;
-    border-radius: .25rem;
     background-color: #fff;
     color: #495057;
     font-size: 1rem;
     z-index: 1000;
-    min-width: 10rem;
-    top: 100%;
     left: 56px;
-    float: left;
-    margin: -5px;
+    margin-top: -6px;
+}
+
+.autosuggest-dropdown-list {
+    padding: 0;
+    margin: 0;
     list-style: none;
 }
 
-.autosuggest-dropdown li {
+.autosuggest-dropdown-list li {
     width: 100%;
     padding: .25rem 1.5rem;
     clear: both;
@@ -85,12 +86,12 @@ button.execute-btn {
     display: block;
 }
 
-.autosuggest-dropdown .card-header {
-    background: rgba(240, 230, 140, 0.4);
-    height: 30px;
-    display: flex;
-    align-items: center;
+.autosuggest-dropdown-list li.autosuggest-dropdown-header {
+    background-color: #bfdeff;
+    font-size: 10px;
+    line-height: 1.5;
     text-transform: uppercase;
+    text-align: center;
 }
 
 .graph-controls, .table-controls {
