--- a/web/ui/react-app/src/pages/targets/ScrapePoolPanel.module.css
+++ b/web/ui/react-app/src/pages/targets/ScrapePoolPanel.module.css
@@ -1,3 +1,22 @@
+.container {
+  margin-top: -12px;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.normal {
+  composes: title;
+}
+
+.danger {
+  composes: title;
+  color: rgb(242, 65, 65);
+}
+
 .table {
   width: 100%;
 }
