--- a/web/ui/react-app/src/App.css
+++ b/web/ui/react-app/src/App.css
@@ -197,3 +197,43 @@ div.time-input {
 .add-panel-btn {
     margin-bottom: 20px;
 }
+
+.target-head {
+    font-weight: 700;
+    font-size: large;
+}
+
+.outer-layer {
+    padding: 2%;
+}
+
+.inner-layer {
+    background-color: #f5f5f5;
+    border: 1px solid #f1f1f1;
+    padding: 1%;
+}
+
+.head {
+    font-weight: 600;
+    margin-bottom: 2%;
+    border-bottom: 1px solid #DEE2E6;
+}
+
+.label-style {
+    font-weight: 600;
+    font-size: 11px;
+    color: #fff;
+    background-color: #007BFF;
+    margin: 1px;
+    padding: 1px;
+    display: table;
+}
+
+.label-component {
+    margin-bottom: 1%;
+}
+
+.btn-sd-style {
+    padding: 1px;
+    font-size: 10px;
+}
