calc time range properly
Signed-off-by: Boyko Lalov <boiskila@gmail.com>

--- a/web/ui/react-app/src/App.css
+++ b/web/ui/react-app/src/App.css
@@ -108,6 +108,7 @@ button.execute-btn {
 
 .graph-controls .time-input input {
     border-right: none;
+    padding-right: 0;
 }
 
 div.time-input {
