Allow sec timestamp (#6460)
* adding seconds timestamp to time input

Signed-off-by: Boyko Lalov <boiskila@gmail.com>

* calc time range properly

Signed-off-by: Boyko Lalov <boiskila@gmail.com>

* fix test

Signed-off-by: Boyko Lalov <boiskila@gmail.com>

* unify table and graph time inputs

Signed-off-by: blalov <boiskila@gmail.com>

* rename calcTimeRange func

Signed-off-by: blalov <boiskila@gmail.com>

--- a/web/ui/react-app/src/App.css
+++ b/web/ui/react-app/src/App.css
@@ -98,7 +98,7 @@ button.execute-btn {
     margin-bottom: 10px;
 }
 
-.graph-controls input {
+.graph-controls input, .table-controls input {
     text-align: center;
 }
 
@@ -106,27 +106,23 @@ button.execute-btn {
     width: 50px;
 }
 
-.graph-controls .time-input input {
+.time-input input {
     border-right: none;
 }
 
-div.time-input {
-    width: 240px !important;
-}
-
-.table-controls input {
-    text-align: center;
+.time-input {
+    width: 270px !important;
 }
 
 .graph-controls input.resolution-input {
     width: 90px;
 }
 
-.graph-controls .time-input, .graph-controls .resolution-input, .graph-controls .stacked-input {
+.graph-controls > :not(:first-child) {
     margin-left: 20px;
 }
 
-.graph-controls .clear-time-btn {
+    .graph-controls .clear-time-btn, .table-controls .clear-time-btn {
     background: #fff;
     border-left: none;
     border-top: 1px solid #ced4da;
