separate filters from show-annotations checkbox
Signed-off-by: blalov <boiskila@gmail.com>

--- a/web/ui/react-app/src/App.css
+++ b/web/ui/react-app/src/App.css
@@ -12,6 +12,10 @@ input[type='checkbox']:checked + label {
   line-height: 1.8;
 }
 
+[for$='-toggler'] {
+    line-height: 1.6;
+}
+
 .capitalize-title::first-letter {
     text-transform: capitalize;
 }
