hide non selected alert types
Signed-off-by: Boyko Lalov <boiskila@gmail.com>

--- a/web/ui/react-app/src/App.css
+++ b/web/ui/react-app/src/App.css
@@ -226,7 +226,7 @@ button.execute-btn {
   font-size: large;
 }
 
-.status-badges {
+.group-info {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
