--- a/web/ui/react-app/src/App.css
+++ b/web/ui/react-app/src/App.css
@@ -9,8 +9,8 @@ html {
 }
 
 .navbar-brand img {
-  padding-right: 0.6em;
-  height: 1.4em;
+  padding-right: 1rem;
+  height: 1.9rem;
 }
 
 .navbar-brand {
