Make React UI the default, keep old UI under /classic
The React app's assets are now served under /assets, while all old
custom web assets (including the ones for console templates) are now
served from /classic/static.

I tested different combinations of --web.external-url and
--web.route-prefix with proxies in front, and I couldn't find a problem
yet with the routing. Console templates also still work.

While migrating old endpoints to /classic, I noticed that /version was
being treated like a lot of the old UI pages, with readiness check
handler in front of it, etc. I kept it in /version and removed that
readiness wrapper, since it doesn't seem to be needed for that endpoint.

Signed-off-by: Julius Volz <julius.volz@gmail.com>

--- a/web/ui/templates/service-discovery.html
+++ b/web/ui/templates/service-discovery.html
@@ -1,6 +1,6 @@
 {{define "head"}}
-<link type="text/css" rel="stylesheet" href="{{ pathPrefix }}/static/css/targets.css?v={{ buildVersion }}">
-<script src="{{ pathPrefix }}/static/js/targets.js?v={{ buildVersion }}"></script>
+<link type="text/css" rel="stylesheet" href="{{ pathPrefix }}/classic/static/css/targets.css?v={{ buildVersion }}">
+<script src="{{ pathPrefix }}/classic/static/js/targets.js?v={{ buildVersion }}"></script>
 
 <style>
   *[id]:before {
