--- a/web/ui/templates/alerts.html
+++ b/web/ui/templates/alerts.html
@@ -1,6 +1,6 @@
 {{define "head"}}
-  <link type="text/css" rel="stylesheet" href="{{ pathPrefix }}/static/css/alerts.css?v={{ buildVersion }}">
-  <script src="{{ pathPrefix }}/static/js/alerts.js?v={{ buildVersion }}"></script>
+  <link type="text/css" rel="stylesheet" href="{{ pathPrefix }}/classic/static/css/alerts.css?v={{ buildVersion }}">
+  <script src="{{ pathPrefix }}/classic/static/js/alerts.js?v={{ buildVersion }}"></script>
 {{end}}
 
 {{define "content"}}
@@ -39,7 +39,7 @@
           <tr class="alert_details">
             <td>
               <div>
-                <pre style="display:block; padding:9.5px; font-size:13px; color:#333; word-break:break-all; background-color:#f5f5f5; border:1px solid #ccc; border-radius:4px;" ><code>{{.HTMLSnippet pathPrefix}}</code></pre>
+                <pre style="display:block; padding:9.5px; font-size:13px; color:#333; word-break:break-all; background-color:#f5f5f5; border:1px solid #ccc; border-radius:4px;" ><code>{{.HTMLSnippet (print pathPrefix "/classic")}}</code></pre>
               </div>
               {{if $activeAlerts}}
               <table class="table table-bordered table-hover table-sm alert_elements_table">
