Make the brand link in classic UI come back to classic UI home
Signed-off-by: Julien Pivotto <roidelapluie@inuits.eu>

--- a/web/ui/templates/_base.html
+++ b/web/ui/templates/_base.html
@@ -36,7 +36,7 @@
                         <span class="icon-bar"></span-->
                 </button>
 
-                <a class="navbar-brand" href="{{ pathPrefix }}/">Prometheus</a>
+                <a class="navbar-brand" href="{{ pathPrefix }}/classic/">Prometheus</a>
 
 
                 <div id="nav-content" class="navbar-collapse collapse">
